GNOME Bugzilla – Bug 749634
compositor: Strange behaviour mixing streams
Last modified: 2015-05-20 15:16:08 UTC
Created attachment 303666 [details] Previous image Hi, Since this patch http://cgit.freedesktop.org/gstreamer/gst-plugins-bad/commit/?id=0871b7b43db796b50f432e4c892cca65c633b5ff the behaviour of compositor is strange. I use this pipeline to test: gst-launch-1.5 compositor name=mix ! videoconvert ! xvimagesink \ videotestsrc pattern=8 ! video/x-raw,format=AYUV,framerate=5/1,width=320,height=180 ! videobox border-alpha=0 top=0 left=0 ! mix. \ videotestsrc pattern=21 ! video/x-raw,format=AYUV,framerate=5/1,width=320,height=180 ! videobox border-alpha=0 top=0 left=-320 ! mix. \ videotestsrc pattern=18 ! video/x-raw,format=AYUV,framerate=5/1,width=320,height=180 ! videobox border-alpha=0 top=-180 left=0 ! mix. \ videotestsrc pattern=0 ! video/x-raw,format=AYUV,framerate=5/1,width=320,height=180 ! videobox border-alpha=0 top=-180 left=-320 ! mix. The output of the pipeline before the patch (I understand that is the correct output) is shown in the attached picture (previous.png). And the output after the patch can be seen in the other picture (after.png). The second one has a different height and width, and the position of the third stream is wrong. It is a bug or it is a expected behaviour? Regards. David.
Created attachment 303667 [details] After image
Thanks for the test! commit d1419afef1521777a227eb5c83d4be4ccc405ef2 Author: Matthew Waters <matthew@centricular.com> Date: Thu May 21 00:56:01 2015 +1000 compositor/glvideomixer: fix up par handling We were using the wrong formula https://bugzilla.gnome.org/show_bug.cgi?id=749634
Thanks for the patch!